# strava-api

./: .gitignore  README.md  pyproject.toml
scripts/: get_activity_data.py
