[tool.poetry]
name = "strava-api"
version = "0.1.0"
description = ""
authors = ["Alex Walmsley <alex.walmsley@signal-ai.com>"]
readme = "README.md"
packages = [{include = "strava_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
ujson = "^5.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
